# albers-core

./: CMakeLists.txt  README.md  alberscoreConfig.cmake.in  edm-tutorial.twiki  init.sh  init_linux.sh  init_macos.sh
albers/: CMakeLists.txt  CollectionBase.h  EventStore.cc  LinkDef.h  PyEventStore.cc  PyEventStore.h  Reader.cc  Registry.cc  Registry.h
datamodel/: CMakeLists.txt
datamodel/datamodel/: LinkDef.h  ParticleHandle.h
examples/: CMakeLists.txt  read.cc  write.cc
python/: CMakeLists.txt  eventstore.py  test_eventstore.py
templates/: Collection.cc.template  Collection.h.template  Handle.cc.template  Handle.h.template  LinkDef.h.template
